FIX: Custom software slider fix for spacing

--- a/src/css/components/_skills-scroll.scss
+++ b/src/css/components/_skills-scroll.scss
@@ -16,7 +16,7 @@
   .skills-scroll-wrapper__item {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     color: $white;
   }
